# stonky

./: CLAUDE.md  FRONTEND_INTEGRATION.md  README.md  package-lock.json  package.json  tsconfig.json
.next/: app-build-manifest.json  trace
.next/server/: _rsc_app_components_BookmarkButton_tsx.js  _rsc_app_components_CompanyAI_tsx.js  _rsc_app_components_FundamentalsCard_tsx.js  _rsc_app_components_NewsList_tsx.js  _rsc_app_components_PriceCard_tsx.js  _rsc_app_components_ThemeToggle_tsx.js  app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
app/: globals.css  layout.tsx  page.tsx
app/components/: BookmarkButton.tsx  BookmarksBar.tsx  CompanyAI.tsx  NewsList.tsx  (+4 more)
backend/: .env.example  .gitignore  API_DOCUMENTATION.md  PHASE2_SUMMARY.md  README.md  alembic.ini  pyproject.toml  test_services.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  company.py  fundamentals.py  news.py  prices.py  search.py  test.py
backend/app/api/v1/schemas/: responses.py
backend/app/core/: config.py  database.py  dependencies.py  logging.py
backend/app/models/: __init__.py  company.py  financials.py  price.py  snapshot.py
backend/app/repositories/: base.py  company.py
backend/app/services/: __init__.py  base.py  news.py  nse.py  screener.py  yahoo.py
backend/migrations/: env.py
backend/migrations/versions/: 20251119_0856_f662571722fc_initial_migration.py
backend/scripts/: validate_setup.py
docs/: MIGRATION_SUMMARY.md  architecture.md  implementation-plan.md  plan-final.md  plan1.md  plan2.md  tech-plan-brief.md
prisma/: schema.prisma
types/: ambient.d.ts
(+30 files in other folders)
